check in tweaked templates with fresh latex

--- a/src/layouts/toc.html
+++ b/src/layouts/toc.html
@@ -1,7 +1,7 @@
-<!-- Template para pandoc -->
+<!-- Template for pandoc -->
 $if(toc)$
 <nav id="$idprefix$TOC">
-<h2>Índice general</h2>
+<h2>Contents</h2>
 $toc$
 </nav>
 $endif$
