--- a/src/layouts/post.html
+++ b/src/layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article>
   <header>
-    <h4><a href="/" alt='Inicio'>En Defensa del Software Libre</a></h4>
+    <h4><a href="/" alt='Inicio'>{{ site.title }}</a></h4>
     <nav id="formats">
       <ul>
 {% for format in site.pandoc.outputs %}
@@ -22,7 +22,7 @@ layout: default
 
   <footer id="related">
 
-      <h2>Otras lecturas</h2>
+      <h2>See also</h2>
       <ul class="posts">
 
 {% for post in site.related_posts limit:3 %}
